runtimelog.txt
optimization framework runtime logging:

      |        ^~~~~~~~~~~~
/home/ansorosa/Desktop/CODE_REPOSITORIO/ERL_Stage_1_Framework_42/Module/../Stage_01/Concretes/DataConcrete_new.h: At global scope:
/home/ansorosa/Desktop/CODE_REPOSITORIO/ERL_Stage_1_Framework_42/Module/../Stage_01/Concretes/DataConcrete_new.h:342:1: error: expected unqualified-id before ‘/’ token
  342 | / ---------------------------------------------------------------
      | ^
In file included from /home/ansorosa/Desktop/CODE_REPOSITORIO/ERL_Stage_1_Framework_42/Module/Modules.hpp:54,
                 from /home/ansorosa/Desktop/CODE_REPOSITORIO/ERL_Stage_1_Framework_42/Module/ConfigManager.hpp:30,
                 from /home/ansorosa/Desktop/CODE_REPOSITORIO/ERL_Stage_1_Framework_42/SampleTestIntegrationCode_v17.cpp:22:
/home/ansorosa/Desktop/CODE_REPOSITORIO/ERL_Stage_1_Framework_42/Module/../Stage_01/Concretes/DataConcrete_new.h: In member function ‘virtual bool DataConcrete::stopCapture()’:
/home/ansorosa/Desktop/CODE_REPOSITORIO/ERL_Stage_1_Framework_42/Module/../Stage_01/Concretes/DataConcrete_new.h:936:47: error: ‘using element_type = class ISystemMetricsAggregator’ {aka ‘class ISystemMetricsAggregator’} has no member named ‘forceFlushBatch’
  936 |     if (metricAggregator_) metricAggregator_->forceFlushBatch();
      |                                               ^~~~~~~~~~~~~~~
/home/ansorosa/Desktop/CODE_REPOSITORIO/ERL_Stage_1_Framework_42/Module/../Stage_01/Concretes/DataConcrete_new.h: In member function ‘virtual bool DataConcrete::dequeFrame()’:
/home/ansorosa/Desktop/CODE_REPOSITORIO/ERL_Stage_1_Framework_42/Module/../Stage_01/Concretes/DataConcrete_new.h:1209:56: warning: comparison of integer expressions of different signedness: ‘size_t’ {aka ‘long unsigned int’} and ‘int’ [-Wsign-compare]
 1209 |     if (displayOrigQueue_ && displayOrigQueue_->size() < cameraConfig_.numBuffers * 2) {
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/ansorosa/Desktop/CODE_REPOSITORIO/ERL_Stage_1_Framework_42/Module/../Stage_01/Concretes/DataConcrete_ne